Correct hover button on mobile

--- a/scss/partials/_button.scss
+++ b/scss/partials/_button.scss
@@ -80,8 +80,8 @@
                 display: flex;
                 justify-content: center;
                 .background-hover{
-                    width: 400px;
-                    height: 400px;
+                    width: 600px;
+                    height: 600px;
                 }
             }
     
